# terra-tracker-sensor

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  app.overlay  prj_debug.conf  prj_release.conf
.github/workflows/: build.yaml  create-build-container.yaml
boards/: rpi_pico_rp2040_w.overlay
container/: build.Dockerfile
src/: logger.cpp  logger.h  main.cpp
src/adapters/: console_logger.cpp  console_logger.h  http_client.cpp  http_client.h  sensor.cpp  sensor.h  socket.cpp  socket.h  wifi.cpp  wifi.h
src/data/: http_response.cpp  http_response.h  sensor_data.h
src/ports/: http_client.h  logger.h  sensor.h  wifi.h
